# hi-octane202x

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: FindADLMIDI.cmake  FindIrrlicht.cmake  FindSFML.cmake
media/: attribution.txt  irrlichtlogo-info.txt  sfml-license-info.txt  sfml-logo-info.txt
media/editor/: camera-info  speedo-info  stopsign-info  stopwatch-info
media/sky/: readme.txt
shaders/: opengl.frag  opengl.vert
src/: definitions.h  editor.cpp  editor.h  editorsession.cpp  editorsession.h  game.cpp  game.h  infrabase.cpp  infrabase.h  main.cpp  maineditor.cpp  race.cpp  race.h
src/audio/: music.cpp  music.h  sound.cpp  sound.h
src/audio/ail/: bank.cpp  bank.h  common.cpp  common.h  ffmt_base.cpp  ffmt_base.h  ffmt_enums.h  format_ail2_gtl.cpp  format_ail2_gtl.h  format_wohlstand_opl3.cpp  format_wohlstand_opl3.h  wopl_file.cpp  wopl_file.h
src/audio/foo-midi/: ADLPlayer.cpp  ADLPlayer.h  Configuration.h  MIDIContainer.cpp  MIDIContainer.h  MIDIPlayer.cpp  MIDIPlayer.h  Range.h
src/draw/: attribution.cpp  attribution.h  drawdebug.cpp  drawdebug.h  gametext.cpp  gametext.h  hud.cpp  hud.h  introplayer.cpp  introplayer.h  menue.cpp  menue.h  minimap.cpp  minimap.h
src/editor/: columndesign.cpp  columndesign.h  editormode.cpp  editormode.h  entitymode.cpp  entitymode.h  fileoperationdialog.cpp  fileoperationdialog.h  itemselector.cpp  itemselector.h  regionmode.cpp  regionmode.h  terraforming.cpp  terraforming.h  texturemode.cpp  texturemode.h  uiconversion.cpp  uiconversion.h  viewmode.cpp  viewmode.h
src/font/: CGUITTFont.cpp  CGUITTFont.h  font_manager.cpp  font_manager.h  gui_freetype_font.cpp  gui_freetype_font.h
src/input/: input.cpp  input.h  numbereditbox.cpp  numbereditbox.h
src/models/: camera.cpp  camera.h  chargingstation.cpp  chargingstation.h  collectable.cpp  collectable.h  collectablespawner.cpp  collectablespawner.h  column.cpp  column.h  cone.cpp  cone.h  cpuplayer.cpp  cpuplayer.h  editorentity.cpp  editorentity.h  entitymanager.cpp  entitymanager.h  expentity.cpp  expentity.h  explauncher.cpp  explauncher.h  explosion.cpp  explosion.h  irrmeshbuf.cpp  irrmeshbuf.h  levelblocks.cpp  levelblocks.h  levelterrain.cpp  levelterrain.h  mgun.cpp  mgun.h  missile.cpp  missile.h  morph.cpp  morph.h  particle.cpp  particle.h  player.cpp  player.h  (+8 more)
src/resources/: assets.cpp  assets.h  blockdefinition.cpp  blockdefinition.h  columndefinition.cpp  columndefinition.h  entityitem.cpp  entityitem.h  levelfile.cpp  levelfile.h  mapentry.cpp  mapentry.h  tableitem.cpp  tableitem.h  texture.cpp  texture.h
src/resources/intro/: decoder.cpp  encoder.cpp  flic.h  flic_details.h  flifile.cpp  flifile.h  flifix.cpp  flifix.h  flifixer-readme.txt  prgtools.cpp  prgtools.h  stdio.cpp
src/resources/readgamedata/: bulcommn.cpp  bulcommn.h  bullfrog-utils-rnc-readme.txt  bullfrog-utils-tabdat-readme.txt  dernc.cpp  dernc.h  objectdatfile.cpp  objectdatfile.h  preparedata.cpp  preparedata.h  xtabdat8.cpp  xtabdat8.h
src/resources/xbrz-1-8/: xbrz.cpp  xbrz_tools.h
src/scenenodes/: CloudSceneNode.cpp
src/utils/: bezier.cpp  bezier.h  crc32.cpp  crc32.h  fileutils.cpp  fileutils.h  gamedbgwnd.cpp  gamedbgwnd.h  logger.cpp  logger.h  logging.h  movingavg.cpp  movingavg.h  path.cpp  path.h  physics.cpp  physics.h  ray.cpp  ray.h  tprofile.cpp  tprofile.h  vcalc.cpp  vcalc.h  worldaware.cpp  worldaware.h
src/utils/boundingbox/: basis.h  collision.cpp  collision.h  coord_frame.h  matrix.h  vector.h
src/utils/tiny-process-library/: process.cpp  process.hpp  process_unix.cpp  process_win.cpp
src/vanilla/: vbase.h  vcalc.cpp  vcalc.h  vvehicle.cpp  vvehicle.h
src/xeffects/: CScreenQuad.h  CShaderPre.cpp  CShaderPre.h  EffectShaders.h
